[tool.poetry]
name = "netlint"
version = "0.1.2"
description = "Performs static analysis on network device configuration files."
authors = ["Leo Kirchner <leo@kirchne.red>"]
license = "GPLv3"
readme = "README.md"
homepage = "https://netlint.readthedocs.io"
repository = "https://github.com/Kircheneer/netlint"
keywords = ["lint", "networking"]
classifiers = [
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Topic :: Software Development :: Documentation",
    "Topic :: Software Development :: Quality Assurance",
]
include = [
    "LICENSE",
]

[tool.poetry.dependencies]
python = "^3.6.1"
ciscoconfparse = "^1.5.30"
click = ">=7.1.2,<9.0.0"
sphinx = { version = ">=3.5.3,<5.0.0", optional = true }
sphinx-rtd-theme = { version = "^0.5.2", optional = true }
m2r2 = {version = "^0.2.7", optional = true }
sphinx-click = {version = ">=2.7.1,<4.0.0", optional = true }
typing-extensions = "^3.7.4"
toml = "^0.10.2"
napalm = "^3.2.0"
rich = "^10.1.0"
fastapi = "^0.65.1"
uvicorn = "^0.13.4"
Jinja2 = "^3.0.1"

[tool.poetry.dev-dependencies]
mypy = "^0.812"
black = "^20.8b1"
flake8 = "^3.9.2"
pytest = "^6.2.4"
coverage = "^5.5"
sphinx = ">=3.5.3,<5.0.0"
sphinx-rtd-theme = "^0.5.2"
m2r2 = "^0.2.7"
sphinx-click = ">=2.7.1,<4.0.0"
pre-commit = "^2.13.0"
flake8-docstrings = "^1.6.0"

[tool.poetry.extras]
# The following section is required to install docs dependencies
# until RTD fully supports poetry: https://github.com/rtfd/readthedocs.org/issues/4912
docs = ["sphinx", "sphinx_rtd_theme", "m2r2", "spinx-click"]

[tool.poetry.scripts]
netlint = 'netlint.cli.main:cli'

[tool.netlint]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
